修正前言描述，更新目录项以更准确反映内容

--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -1,378 +1,464 @@
-# 首次进服指南
+# 巧克力指南
 
 ::: info
-本指南为巧克力服务器详细入门说明，普通指南可通过 `/guide` 或下蹲后按 F 键查看。
+前言：本书是对服务器的更详细指南，普通指南可以通过 `/guide` 或下蹲后按 F 键查看。
+本段后续更新不会包括本服务器粘液科技指南。（￣︶￣）↗　
 :::
 
-## 前言
-
-本书即使后续更新也不会附本服插件粘液科技的指南。  
-服主: lnfiniteADA  
-常见管理: redpig6666（此人会伪装自己的名字）, lhx28  
-还有部分管理员未列出。
+服主：lnfiniteADA  
+常见管理：redpig6666（此入会伪装自己的名字）、lhx28  
+还有部分管理员未列出
 
 ## 目录
 
-1. 服务器背景
-2. 对恶劣玩家的处理
-3. 指令
-4. 领地
-5. 资源
-6. 玩家称号
-7. 世界&维度
-8. 商店
+- 条目1.服务器背景
+- 条目2.对恶劣玩家的处理
+- 条目3.指令
+- 条目4.领地
+- 条目5.资源
+- 条目6.玩家称号
+- 条目7.世界&维度
+- 条目8.商店
 
 ---
 
-## 条目2. 对恶劣玩家的处理
+## 条目2.对恶劣玩家的处理
 
 ::: danger
-对于做出不当行为的玩家（拆别人家、炸服、毁坏公共设施如生电设施、lanamark）可以投票踢出。情节严重的，管理员会 ban 玩家名，不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，不能再进入服务器。
+对于做出不当行为的玩家（拆别人家、炸服、毁坏公共设施如生电设施、lanamark）可以投票踢出，指令部分详见条目3.指令。情节严重的，管理员会 ban 玩家名，该玩家不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，该玩家以后不能再进入服务器。
 :::
 
-## 条目3. 指令
+---
 
-### 投票指令
+## 条目3.指令
 
-用于踢出玩家：
+### 子条目1.投票指令：用于踢出玩家
 
+发起：
 ```shell
 /vk create <玩家名> [原因]
 ```
-尖括号内容必填，方括号选填。
+（尖括号内容必填，方括号选填 but我建议填因为我们以后审核的时候不写我不好分辨 ，下同）
 
 查看目前的投票信息：
-
 ```shell
 /vk info
 ```
 
 赞成投票：
-
 ```shell
 /vk yes
 ```
 
 反对投票：
-
 ```shell
 /vk no
 ```
 
-### 抽奖
+### 子条目2.抽奖
 
 ```shell
 /lottery <pool> <times>
 ```
-奖池有 head、slimefun、default。  
-例如：`/lottery default 2` 连续抽 2 次奖。
+尖括号内容必填，pool代表奖池，times代表次数。奖池有 head、slimefun、default。
 
-### 自杀
+- head：抽别的玩家的头，抽一次奖要消耗很多下界之星（需要消耗16个），不推荐，有次数限制
+- slimefun：包含粘液科技的东西，3个原石抽一次，但有次数限制
+- default：原版物品奖池，三个下界之星抽一次，每天凌晨刷新一次免费抽奖机会
+
+例如：
+```shell
+/lottery default 2
+```
+在 default 奖池内连续抽2次奖。
+
+### 子条目2.自杀
 
 ```shell
 /suicide
 ```
-遇到不可处理的 bug 可尝试。
+如果你的游戏发生了一些你不可处理的 bug，尝试这么做。
 
-### 动作
+### 子条目3.动作
 
 蹲下：
-
 ```shell
 /sit
 ```
 
 趴下：
-
 ```shell
 /gcrawl
 ```
 
-### 传送
+### 子条目4.传送
 
 请求传送到某人：
-
 ```shell
 /tpa(sk) <玩家名>
 ```
+括号内容可以省去
 
-请某人传送到自己：
-
+请某人传送到自己的位置：
 ```shell
 /tpahere <玩家名>
 ```
 
 接受传送请求：
-
 ```shell
 /tpaccept
 ```
 
 取消传送请求：
-
 ```shell
 /tpacancel
 ```
 
-### 私信
+### 子条目5.私信
 
 ```shell
 /m <玩家名> [私信内容]
 ```
-也可用 `/tell`。
+私信还可以用 `/tell /w /msg` 触发  
+同一目的可以用不同指令来实现
 
-### 领地
+### 子条目6.领地
 
 打开领地菜单：
-
 ```shell
 /dom
 ```
-建议在菜单内操作。
+为了方便地操作，不建议直接使用 dom 的指令如 `/dom resize` 是更改领地大小的指令，建议在菜单里面改，更多详见条目4.领地、条目5.资源
 
-### 公用传送点
+### 子条目7.公用传送点
 
 调出所有传送点名称：
-
 ```shell
 /warp
 ```
-
-前往传送点：
-
+通过
 ```shell
 /warp <传送点>
 ```
+前往各个传送点  
+公用传送点有很多好看的景点，部分实用生电设施，还有腐竹的音乐盒  
+可以通过 `/warp` 前往主世界维度或者资源世界维度，详见条目7.世界&维度
 
-### 转账
+### 子条目8.转账
 
 ```shell
 /pay <玩家名> <数额>
 ```
-数额至少为 0.1。
+数额至少为0.1
 
 ---
 
-## 条目4. 领地
+## 条目4.领地
 
-得到领地有多种方式，创建及转让。  
-通过菜单可管理成员、权限、环境规则。
+得到领地有多种方式，创建以及转让  
+可以通过打开菜单，点击领地列表，点击你的领地的[管理领地]文字，再点击成员列表搜索一个玩家的名字，这个玩家就被添加到了你的这个领地成员组中，你可以单独设置这个人在你领地的权限。其余人的权限在[访客权限]中调整，环境规则在[环境行为]中调整
 
-### 创建领地
+### 子条目1.创建
 
-方法一：
-
+方法1：
 ```shell
 /dom auto_create <领地名称>
 ```
+创建一小块领地，之后可以在领地菜单(`/dom`打开)内调整
 
-方法二：  
-手持箭矢左键点击长方体的一个方块，再点击另一个方块，输入：
-
+方法2：手持箭矢左键点击长方体的一个方块，再手持箭矢点击另一个方块（两个方块同一维度，不能太远），输入
 ```shell
 /dom create <领地名称>
 ```
+即可将包含这两个方块的最小长方体的区域变成你的领地
 
-::: tip
-不同领地不能重合，除非有从属关系。
+::: warning
+注意一定不要在重要设施随便乱建领地（会被删除加ban哦），不同领地不能重合，除非有从属关系
 :::
 
-### 子领地
+### 子条目2.子领地
 
-创建方法同上，命令变为：
-
+创建方法大致同上，只是把单词 create 变成 create_sub
 ```shell
 /dom auto_create_sub <子领地名称> <母领地名称>
 ```
-或
+或者
 ```shell
 /dom create_sub <子领地名称> <母领地名称>
 ```
+即可创建，注意子领地要被母领地包含
 
-::: warning
-要让别人也可以来你的领地，一定要设置合理的访客权限并把“领地传送”打开。
+::: tip
+要让别人也可以来你的领地，一定要设置合理的访客权限并把其中的“领地传送”打开
 :::
 
 ---
 
-## 条目5. 资源
+## 条目5.资源
 
-### 钱
+### 子条目1.钱
 
-长按 tab 查看 Vault 余额。  
-钱可通过与玩家交易或击杀凋零骷髅换下界之星去商店换钱。
+长按 tab 会有一项数据为 Vault，在此处查看余额  
+钱可以通过与玩家交易或者击杀凋零骷髅获取下界之星去商店换钱，详见条目8.商店
 
-### 基础资源&生电设施&重要设施
+### 子条目2.基础资源&生电设施&重要设施
 
 ::: details 免责声明
-主要建造者判定方式为作者查询设施方块得出，可能误判。如有疑问请反馈。
+主要建造者的判定方式是这本文的作者 Voidsidian 查询设施上的部分方块后得出的，Voidsidian 会选择出查询出的频率最高的人作为主要建造者，有可能误判！若有疑问或者补充可以反馈给 Voidsidian。领地主可以更改领地名称，所以你可能会有 tp 领地却找不到的情况，发生这种情况请询问他人！
 :::
 
-#### 1. 凋零骷髅塔
+验塔塔推荐：wdsj 的主世界猪人塔(`/warp [设施]--主世界🐖人塔`)  
+小黑塔(缺乏维护 `/warp [设施]--小黑塔[设施`)  
+猪人塔(`/dom tp -----小猪人塔`)
 
-- 塔1：`/warp [设施]-凋零骷髅塔`
-- 塔2：`/warp [设施]-凋零骷髅塔-Voidsidian`
+### 1.凋零骷髅塔
 
-#### 2. 僵尸猪人塔
+塔1(目前极度缺乏维护)：  
+前往：`/warp [设施]-凋零骷髅塔`  
+前往挂机点：`/warp [设施]-凋零骷髅塔bot挂机点`  
+建造者：LJTAB, lhx28, yst666666 根据猜测，LJTAB 是主要建造者  
+作者 Voidsidian 写书时所有的凋零骷髅塔都需要挂机点
 
-- 塔1：`/warp [设施]--主世界🐖人塔`
-- 塔2：`/warp [设施]--猪人塔`
-- 塔3：`/warp [设施]--Voidsidian🐖人塔`
-- 塔4：`/dom tp -----小猪人塔`
+塔2(效率更高)：  
+前往：`/warp [设施]-凋零骷髅塔-Voidsidian`  
+前往挂机点：`/warp [设施]-凋零骷髅塔bot挂机点-Voidsidian`  
+前往更好的挂机点(要求前一个挂机点没人)：`/dom tp 凋灵骷髅塔bot挂机点`  
+主要建造者：Voidsidian 详见具体设施内写明的建造细节和参与人物  
+作者 Voidsidian 写书时所有的凋零骷髅塔都需要挂机点
 
-#### 3. 女巫塔
+### 2.僵尸猪人塔
 
-- `/warp [设施]--女巫塔1`
+塔1：假人处 `/warp [设施]--主世界🐖人塔`  
+收集处 `/warp [设施]--粘液科技公益工业区` 有收集装置，萌新着挂假人了  
+开机方式：先去猪人塔处挂个假人后去再收集处吃经验  
+主要建造者：wdsj
 
-#### 4. 小黑塔
+塔2：前往 `/warp [设施]--猪人塔`  
+缺点：僵尸猪人不是残血，要玩家手动攻击吸引仇恨才可使用，效率还可以  
+主要建造者：wdhaoxun
 
-- 塔1：`/warp [设施]--小黑塔`
-- 塔2：`/dom tp -----小黑塔`
+塔3：前往 `/warp [设施]--Voidsidian🐖人塔`  
+有两种模式，通过攀爬脚手架到高层密闭房间内可以调整模式，让猪人直接摔死或者留半颗心打刷经验，猪人会自动寻路，效率还可以  
+建造者：Voidsidian
 
-#### 5. 交易所
+塔4：前往 `/dom tp -----小猪人塔`  
+经验很多  
+主要建造者：cpc
 
-- `/dom tp -----(最前面吧)交易所`
+### 3.女巫塔
 
-#### 6. 潜影贝农场
+前往 `/warp [设施]--女巫塔1`  
+多资源，涵盖粘液球、线之类的  
+主要建造者：yangyang14
 
-- `/warp [设施]--潜影bei农场`
+### 4.小黑塔
 
-#### 7. 皮革和猪排
+塔1：前往 `/warp [设施]--小黑塔`  
+效率特别高，但是缺乏维护，如果你去的时候效率不高，就去下面的小黑塔  
+主要建造者：lhx28 和 redpig6666，二者均为管理员，使用结构或者投影快速建造
 
-- `/dom tp 皮革猪排`
+塔2：前往 `/dom tp -----小黑塔`  
+效率还可以  
+主要建造者：wdsj 和 cpc
 
-#### 8. 火药塔
+### 5.交易所
 
-- 塔1：`/warp [设施]--火药塔`
-- 塔2：`/warp 火药塔`、`/warp 火药塔收集`
+前往 `/dom tp -----(最前面吧)交易所`  
+可以交易附魔书  
+主要建造者：yancheng
 
-#### 9. 刷铁机、铁傀儡塔
+### 6.潜影贝农场
 
-- 塔1：`/warp [设施]--刷铁机(big`
-- 塔2：`/warp [设施]--little刷铁机`
+前往 `/warp [设施]--潜影bei农场`  
+这本书的作者 Voidsidian 不会用  
+建造者：yangyang14
 
-#### 10. 史莱姆塔
+### 7.皮革和猪排
 
-- `/warp [设施]--史莱姆农场1`
+前往 `/dom tp 皮革猪排`  
+获取熟肉和皮革的好地方，猪排效率还可以  
+建造者：Qiaoral
 
-#### 11. 凋零击杀塔
+### 8.火药塔
 
-- `/dom tp wither`
+塔1：前往 `/warp [设施]--火药塔（效率低）`  
+实际上是各种怪物都刷的塔，效率一般，火药效率低  
+主要建造者：imtongxuan
 
-#### 12. 袭击塔
+塔2：前往 bot 挂机点 `/warp 火药塔`  
+前往收集处 `/warp 火药塔收集`  
+不知道为什么，火药塔有时候不对外人开放收集处的箱子  
+主要建造者：lemon5410
 
-- `/dom tp icey的袭击塔`
-- 药水获取：`/dom tp -袭击`
+### 9.刷铁机、铁傀儡塔
 
-#### 13. 海龟相关
+塔1：前往 `/warp [设施]--刷铁机(big`  
+主要建造者：imtongxuan
 
-- `/dom tp ---王八`
+塔2：前往 `/warp [设施]--little刷铁机`  
+建造者：sensen01
 
-#### 14. 岩浆怪塔
+### 10.史莱姆塔
 
-- `/dom tp -----岩浆怪刷怪塔`
-- `/dom tp -----岩浆怪刷怪塔(收集点)`
+前往 `/warp [设施]--史莱姆农场1`  
+主要建造者：lemon5410 和 ATJYHGK
 
-#### 15. 恶魂塔
+### 11.凋零击杀塔
 
-- `/dom tp 眼泪`
-- `/dom tp -----双维度恶魂塔`
-- `/dom tp -----恶魂塔`
+前往 `/dom tp wither`  
+半自动式，要消耗冷凝粒子作为燃料，可以去303的商店购买  
+建造者：303
 
-#### 16. 刷石机
+### 12.袭击塔
 
-- `/dom tp -----刷石机(原石,石头,石砖)`
+前往 `/dom tp icey的袭击塔`  
+新版袭击塔一定要喝下药水才可触发  
+主要建造者：Qiaoral、wdsj、SuddenCast08790、ICEY_love  
+--谁建造划水了？谁是吉祥物？我不清楚啊，好难猜啊。  
+药水获取 `/dom tp -袭击`  
+建造者：wdsj
 
-#### 17. 三色蛙鸣灯获取基地
+### 13.海龟有关（不懂）
 
-- `/dom tp 三色蛙鸣灯`
+前往 `/dom tp ---王八`  
+没啥用，但是资源世界有海龟蛋场  
+建造者：wdsj
 
-#### 18. 海底神殿相关资源获取
+### 14.岩浆怪塔
 
-- 塔1：`/dom tp 海晶灯挂机`、`/dom tp haijingdeng`
-- 塔2：`wdsj的海底`、`wdsj的海底下届`
+前往 `/dom tp -----岩浆怪刷怪塔`  
+前往收集点 `/dom tp -----岩浆怪刷怪塔(收集点)`  
+建造者：cpc
 
-#### 19. 恼鬼塔
+### 15.恶魂塔
 
-- `/dom tp naogui`
+塔1：前往 `/dom tp 眼泪`  
+建造者：Qiaoral
 
-#### 20. 凋零玫瑰塔
+塔2：前往挂机点 `/dom tp -----双维度恶魂塔`  
+前往收集处 `/dom tp -----双维度恶魂塔(收集处)`  
+建造者：cpc
 
-- `/dom tp diaolmeig`
+塔3：前往 `/dom tp -----恶魂塔`  
+建造者：cpc
 
-#### 21. 唱片获取
+### 16.刷石机
 
-- `/dom tp唱片`
+`/dom tp -----刷石机(原石,石头,石砖)`  
+建造者：cpc  
+服务器还有别的效率很高的刷石机
 
-#### 22. 石英获取（与猪灵交易）
+### 17.三色蛙鸣灯获取基地
 
-- `/dom tp 石英pro`
+前往 `/dom tp 三色蛙鸣灯`  
+建造者：Qiaoral
 
-#### 23. 蜂蜜相关物品获取
+### 18.海底神殿相关资源获取
 
-- `/dom tp 蜂蜜块`
+塔1：前往挂机点 `/dom tp 海晶灯挂机`  
+前往收集点 `/dom tp haijingdeng`  
+建造者：Qiaoral
 
-#### 24. 刷花机、滴水石锥机、西瓜南瓜机、仙人掌甘蔗混合机
+塔2：前往挂机点 wdsj 的海底  
+前往收集点 wdsj 的海底下届  
+Byd 老小子藏着掖着若非我想起来问一句还真就把这个忘了  
+建造者：wdsj
 
-- `/dom tp [Qiaoral和朋友们的基地]`
+### 19.恼鬼塔（后期有用）
 
-#### 25. 熔炉组
+`/dom tp naogui`  
+把栅栏门打开后站在堆肥桶中央（下半身要在堆肥桶内）之后垂直向上打即可，掉落的物品可以游到水面捡。记得使用完后一定要把栅栏门关上！！！  
+建造者：Qiaoral
 
-- 塔1：`/dom tp 160x熔炉组`
-- 塔2：`/warp [设施]--320熔炉组`
-- 塔3：`/warp [设施]--320熔炉组(粘液)`
+### 20.凋零玫瑰塔
 
-#### 26. 一般刷怪塔
+`/dom tp diaolmeig`  
+建造者：Qiaoral
 
-- `/dom tp wdsj刷怪塔`
-- `/dom tp wdsj的下届`
+### 21.唱片获取
 
-#### 27. 景区
+前往 `/dom tp唱片`  
+建造者：Qiaoral
 
-- `/dom tp 罗德岛`
+### 22.石英获取（与猪灵交易）
+
+前往 `/dom tp 石英pro`  
+建造者：wdsj
+
+### 23.蜂蜜相关物品获取
+
+前往 `/dom tp 蜂蜜块`  
+建造者：Qiaoral
+
+### 24.刷花机，滴水石锥机，西瓜南瓜机，仙人掌甘蔗混合机
+
+前往 `/dom tp [Qiaoral和朋友们的基地]`  
+主要建造者：Qiaoral
+
+### 25.熔炉组
+
+塔1：前往 `/dom tp 160x熔炉组`  
+主要建造者：redpig6666
+
+塔2：前往 `/warp [设施]--320熔炉组`  
+主要建造者：???（本文的作者 Voidsidian 不好确定主要建造者，有很多人的名字）
+
+塔3：前往 `/warp [设施]--320熔炉组(粘液)`  
+速度很快，毕竟是插件粘液科技的产物  
+建造者：SuddenCast08790
+
+### 26.一般刷怪塔
+
+前往挂机点 `/dom tp wdsj刷怪塔`  
+前往收集点 `/dom tp wdsj的下届`  
+效率还行  
+建造者：wdsj
+
+### 27.景区（这里就推荐一个）
+
+前往 `/dom tp 罗德岛`  
+这里没人微恐  
+建造者：lhx28，图纸提供：Qiaoral  
+lhx28 用一点手段快速建造，所以方块没有放置记录，该建筑是指令生成
 
 ---
 
-## 条目6. 玩家称号
+## 条目6.玩家称号
 
-称号有：
+称号有：[小萌新]、[萌新]、[玩家]、[known]、[trusted]  
+对应游玩时间（到时间就能升级）分别为：0、24h、190h、800h、1000h  
+颜色分别为白、蓝、绿、橙、紫  
+最后两个称号的玩家可以修改自己称号内容和颜色（部分内容只能不完全修改）
 
-- [小萌新]：0h，白色
-- [萌新]：24h，蓝色
-- [玩家]：190h，绿色
-- [known]：500h，橙色
-- [trusted]：1000h，紫色
+实际上所有中文称号都是英文的汉化，比如 [user] 就是 [玩家]，显示出来是 [玩家] 而已  
+[小萌新]是不能做一些特定活动的，比如使用 tnt 岩浆之类的东西
+这插件应该是服主写的，市面上我还没见过有相同类型的插件
+---
 
-最后两个称号可修改内容和颜色。  
-所有中文称号均为英文汉化。  
-[小萌新]不能做特定活动，如使用 TNT。  
-如有疑问请咨询管理员。
+## 条目7.世界&维度
+
+服务器因为插件，共有12个维度
+
+- 主世界维度（Overworld）：不会重置
+- 末地（The End）：会定期重置，但是末地会保留主岛、小黑塔和一些管理员的领地不重置
+- 地狱（下界，The Nether）：不太可能重置（这本书书的作者 Voidsidian 对下界是否重置不太清楚）
+- 资源世界（Na）：会不定期重置，一定不要把基地建造在资源世界，建造自己的基地一定要建在主世界维度！前往 `/warp [world]--资源`
+- 其他的维度都是粘液宇宙的其他行星，是真的有其他行星哦坐火箭就可以到达了
+
+主世界维度出生点处(`/warp CSD`)附近有前往末地和地狱的传送门  
+末地主岛已经被改造成空间站
+
+可以通过 `/warp` 前往人造末地（位于主世界），详见条目3.指令-子条目7.公用传送点
 
 ---
 
-## 条目7. 世界&维度
+## 条目8:商店
 
-服务器因插件共有 12 个维度：
-
-- 主世界（Overworld）：不会重置
-- 末地（The End）：定期重置，主岛、小黑塔和部分管理员领地不重置
-- 地狱（The Nether）：不太可能重置
-- 资源世界（Na）：不定期重置，基地请建在主世界
-
-主世界出生点 `/warp CSD` 附近有前往末地和地狱的传送门。  
-末地主岛已改造成空间站。  
-可通过 `/warp` 前往人造末地（位于主世界）。
-
----
-
-## 条目8. 商店
-
-通过 `/shop` 打开商店页面。  
-玩家可花费 10000 金币创建商店。  
-钱可通过击杀凋零骷髅去服主（lnfiniteADA）商店（haoshop）换钱。  
-服主有抑制通货膨胀的想法，下界之星回收价格已降至 10 金币。  
-商店操作方式和细节商店本身会提供。
+通过 `/shop` 打开商店页面。玩家可以花费10000金币（钱）创建一个商店，那么问题来了，钱怎么获取？很简单，击杀凋零骷髅去服主（lnfiniteADA）的商店（haoshop）的收购商品处换钱。值得注意的是，服主有抑制通货膨胀的想法(喵喵? 我就是定的比较低我有的时候会撒钱da)，因为服务器有人开发出了全自动刷凋零的装置，所以下界之星的回收价格从不少于100金币下降到了现在写书时的10金币；虽然这必会带来经济停滞，但是管理员说这些都是之后的事…… ()
+商店的各种操作方式和细节商店本身就会提供
 
 ---
 
 Written by Voidsidian 2025.8.26
+
+lnfiniteADA：Hello我是腐竹感谢这位朋友给我提供的本文主体部分,我就是把markdown给补全了也就是写了一份markdown,嗯... 也许会有更多的文档呢，不过那是以后的事了,感谢大家玩我这个服务器
