--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -27,7 +27,7 @@
 ::: danger
 对于做出不当行为的玩家（拆别人家、炸服、毁坏公共设施如生电设施、lanamark）可以投票踢出，指令部分详见条目3.指令。情节严重的，管理员会 ban 玩家名，该玩家不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，该玩家以后不能再进入服务器。
 :::
-
+lnfiniteADA：其实我不怎么用banIP的这个东西很好绕过,我有别的办法的
 ---
 
 ## 条目3.指令
@@ -207,13 +207,13 @@
 主要建造者的判定方式是这本文的作者 Voidsidian 查询设施上的部分方块后得出的，Voidsidian 会选择出查询出的频率最高的人作为主要建造者，有可能误判！若有疑问或者补充可以反馈给 Voidsidian。领地主可以更改领地名称，所以你可能会有 tp 领地却找不到的情况，发生这种情况请询问他人！
 :::
 
-验塔塔推荐：wdsj 的主世界猪人塔(`/warp [设施]--主世界🐖人塔`)  
+验塔塔推荐：主世界猪人塔(`/warp [设施]--主世界🐖人塔`)  
 小黑塔(缺乏维护 `/warp [设施]--小黑塔[设施`)  
 猪人塔(`/dom tp -----小猪人塔`)
 
 ### 1.凋零骷髅塔
 
-塔1(目前极度缺乏维护)：  
+塔1(目前缺乏维护)：  
 前往：`/warp [设施]-凋零骷髅塔`  
 前往挂机点：`/warp [设施]-凋零骷髅塔bot挂机点`  
 建造者：LJTAB, lhx28, yst666666 根据猜测，LJTAB 是主要建造者  
@@ -419,7 +419,6 @@ Byd 老小子藏着掖着若非我想起来问一句还真就把这个忘了
 前往 `/dom tp 罗德岛`  
 这里没人微恐  
 建造者：lhx28，图纸提供：Qiaoral  
-lhx28 用一点手段快速建造，所以方块没有放置记录，该建筑是指令生成
 
 ---
 
