--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -26,8 +26,8 @@
 
 ::: danger
 对于做出不当行为的玩家（拆别人家、炸服、毁坏公共设施如生电设施、lanamark）可以投票踢出，指令部分详见条目3.指令。情节严重的，管理员会 ban 玩家名，该玩家不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，该玩家以后不能再进入服务器。
-:::
 lnfiniteADA：其实我不怎么用banIP的这个东西很好绕过,我有别的办法的
+:::
 ---
 
 ## 条目3.指令
@@ -428,10 +428,11 @@ Byd 老小子藏着掖着若非我想起来问一句还真就把这个忘了
 对应游玩时间（到时间就能升级）分别为：0、24h、190h、800h、1000h  
 颜色分别为白、蓝、绿、橙、紫  
 最后两个称号的玩家可以修改自己称号内容和颜色（部分内容只能不完全修改）
-
+::: TIP
 实际上所有中文称号都是英文的汉化，比如 [user] 就是 [玩家]，显示出来是 [玩家] 而已  
 [小萌新]是不能做一些特定活动的，比如使用 tnt 岩浆之类的东西
 这插件应该是服主写的，市面上我还没见过有相同类型的插件
+:::
 ---
 
 ## 条目7.世界&维度
