删除不再需要的巧克力指南文档，更新首次进服指南，添加服务器背景信息和对恶劣玩家处理的详细说明

--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -22,6 +22,13 @@
 
 ---
 
+## 条目1.服务器背景
+
+2021年建立的生存小服，那时候建立这个服务器的初衷是为了和朋友们联机，但是大家玩的也少，一直开着没人有点可惜，于是我就选择把服务器开放出来与更多的玩家分享这份快乐。如果你想来找几个人联机或者带上你的好友一起来玩，那我开服的意义也就得到了认可。
+
+---
+---
+
 ## 条目2.对恶劣玩家的处理
 
 ::: danger
@@ -428,7 +435,7 @@ Byd 老小子藏着掖着若非我想起来问一句还真就把这个忘了
 对应游玩时间（到时间就能升级）分别为：0、24h、190h、800h、1000h  
 颜色分别为白、蓝、绿、橙、紫  
 最后两个称号的玩家可以修改自己称号内容和颜色（部分内容只能不完全修改）
-::: TIP
+::: tip
 实际上所有中文称号都是英文的汉化，比如 [user] 就是 [玩家]，显示出来是 [玩家] 而已  
 [小萌新]是不能做一些特定活动的，比如使用 tnt 岩浆之类的东西
 这插件应该是服主写的，市面上我还没见过有相同类型的插件
