--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -224,14 +224,14 @@ lnfiniteADA：其实我不怎么用banIP的这个东西很好绕过,我有别的
 前往：`/warp [设施]-凋零骷髅塔`  
 前往挂机点：`/warp [设施]-凋零骷髅塔bot挂机点`  
 建造者：LJTAB, lhx28, yst666666 根据猜测，LJTAB 是主要建造者  
-作者 Voidsidian 写书时所有的凋零骷髅塔都需要挂机点
+写书时所有的凋零骷髅塔都需要挂机点
 
 塔2(效率更高)：  
 前往：`/warp [设施]-凋零骷髅塔-Voidsidian`  
 前往挂机点：`/warp [设施]-凋零骷髅塔bot挂机点-Voidsidian`  
 前往更好的挂机点(要求前一个挂机点没人)：`/dom tp 凋灵骷髅塔bot挂机点`  
 主要建造者：Voidsidian 详见具体设施内写明的建造细节和参与人物  
-作者 Voidsidian 写书时所有的凋零骷髅塔都需要挂机点
+写书时所有的凋零骷髅塔都需要挂机点
 
 ### 2.僵尸猪人塔
 
