--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -32,7 +32,7 @@
 ## 条目2.对恶劣玩家的处理
 
 ::: danger
-对于做出不当行为的玩家（拆别人家、炸服、毁坏公共设施如生电设施、lanamark）可以投票踢出，指令部分详见条目3.指令。情节严重的，管理员会 ban 玩家名，该玩家不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，该玩家以后不能再进入服务器。
+对于做出不当行为的玩家（拆别人家、炸服、堵桥、毁坏公共设施如生电设施、lanamark、开挂为了恶心人跳脸装逼等等）可以投票踢出，指令部分详见条目3.指令。情节严重的，管理员会 ban 玩家名，该玩家不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，该玩家以后不能再进入服务器。
 lnfiniteADA：其实我不怎么用banIP的这个东西很好绕过,我有别的办法的
 :::
 ---
@@ -45,7 +45,7 @@ lnfiniteADA：其实我不怎么用banIP的这个东西很好绕过,我有别的
 ```shell
 /vk create <玩家名> [原因]
 ```
-（尖括号内容必填，方括号选填 but我建议填因为我们以后审核的时候不写我不好分辨 ，下同）
+（尖括号内容必填，方括号必填 ，下同）
 
 查看目前的投票信息：
 ```shell
@@ -432,7 +432,7 @@ Byd 老小子藏着掖着若非我想起来问一句还真就把这个忘了
 ## 条目6.玩家称号
 
 称号有：[小萌新]、[萌新]、[玩家]、[known]、[trusted]  
-对应游玩时间（到时间就能升级）分别为：0、24h、190h、800h、1000h  
+对应游玩时间（需要其他的东西鉴权）分别为：0、24h、190h、800h、1000h  
 颜色分别为白、蓝、绿、橙、紫  
 最后两个称号的玩家可以修改自己称号内容和颜色（部分内容只能不完全修改）
 ::: tip
@@ -444,7 +444,7 @@ Byd 老小子藏着掖着若非我想起来问一句还真就把这个忘了
 
 ## 条目7.世界&维度
 
-服务器因为插件，共有12个维度
+服务器因为黏糊糊的液体，所以共有12个维度
 
 - 主世界维度（Overworld）：不会重置
 - 末地（The End）：会定期重置，但是末地会保留主岛、小黑塔和一些管理员的领地不重置
