--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -32,7 +32,7 @@
 ## 条目2.对恶劣玩家的处理
 
 ::: danger
-对于做出不当行为的玩家（拆别人家、炸服、堵桥、毁坏公共设施如生电设施、lanamark、开挂为了恶心人跳脸装逼等等）可以投票踢出，指令部分详见条目3.指令。情节严重的，管理员会 ban 玩家名，该玩家不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，该玩家以后不能再进入服务器。
+对于做出不当行为的玩家（拆别人家、炸服、堵桥、毁坏公共设施如生电设施、lanamark、开挂尤其是为了恶心人跳脸装逼等等）可以投票踢出，指令部分详见条目3.指令。情节严重的，管理员会 ban 玩家名，该玩家不能以该玩家名进入服务器。情节特别严重的，管理员会 ban 该玩家的 IP，该玩家以后不能再进入服务器。
 lnfiniteADA：其实我不怎么用banIP的这个东西很好绕过,我有别的办法的
 :::
 ---
