更新玩家称号条目，详细说明等级系统的机制，增加对称号系统的理解提示

--- a/首次进服指南.md
+++ b/首次进服指南.md
@@ -432,13 +432,17 @@ Byd 老小子藏着掖着若非我想起来问一句还真就把这个忘了
 ## 条目6.玩家称号
 
 称号有：[小萌新]、[萌新]、[玩家]、[known]、[trusted]  
-对应游玩时间（需要其他的东西鉴权）分别为：0、24h、190h、800h、1000h  
+怎么说呢，这个服务器的等级系统和金钱系统其实都不重要，真的不重要。先说称号系统，也就是等级。它的灵感其实是来自VRChat。VRChat的等级系统本身算是一个“黑箱” 它可能包含不少健全的判定方式，比如你加了多少好友、有没有被屏蔽或拉黑，还有挂机时长——虽然我不确定挂机时长是否计算在内，但最重要的可能已经不是在线时长了。
+但这个服务器的等级插件最早是我自己写的，当时只有时长计算功能，挂多长时间就升多少级。后来，加入了一些其他的计算方式，所以现在也算是个“半黑箱”。不过，这个黑箱连我自己都不太清楚具体机制，因为后来这个插件不完全是我写的了。有另一位开发者加入（是可爱的rikoukenn），他帮我改了不少东西，可以说后续大部分内容都是他写的，我也就没怎么再接触。
+（当然你们也别去找他，他平时也挺忙的，生活里事情也多。）
 颜色分别为白、蓝、绿、橙、紫  
 最后两个称号的玩家可以修改自己称号内容和颜色（部分内容只能不完全修改）
 ::: tip
 实际上所有中文称号都是英文的汉化，比如 [user] 就是 [玩家]，显示出来是 [玩家] 而已  
 [小萌新]是不能做一些特定活动的，比如使用 tnt 岩浆之类的东西
 这插件应该是服主写的，市面上我还没见过有相同类型的插件
+so，称号系统你就当它是一个黑箱来看待。可能会参考在线时长、曾经打过多少人、击杀过多少东西，是否挂机，以及其他一些因素……总之，只要你正常游玩、花时间，就一定能正常升级，这点和VRChat差不多。
+说到底，别把这个系统太放在心上，它真的不太重要。如果因为这个称号感觉自己好像低了一等高了一等那，因为这个的话或许我以后会考虑做一个隐藏开关，让大家可以“眼不见心不烦”。
 :::
 ---
 
